--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
-name: 'build-test'
+name: build-test
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
     branches:
       - main
-      - 'releases/*'
+      - "releases/*"
 
 jobs:
   build: # make sure build/ci work properly
@@ -15,10 +15,25 @@ jobs:
           npm install
       - run: |
           npm run all
+      - run: |
+          mkdir ./report
+          [ ! -f ./blinka_results.json ] || mv blinka_results.json ./report
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: report
+          path: ./report
+
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: |
+          sed -i 's/\"commit\": \"fake\"/\"commit\": \"${{ github.even.pull_request.head.sha || github.sha }}\"/g' ./__tests__/blinka_results.json
+
       - uses: ./
         with:
-          milliseconds: 1000
+          repository: davidwessman/blinka_action
+          token_id: ${{ secrets.BLINKA_TOKEN_ID }}
+          token_secret: ${{ secrets.BLINKA_TOKEN_SECRET }}
+          filename: "./__tests__/blinka_results.json"
