Branding: Update name, icon and color

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
-name: "blinka-report"
+name: "blinka"
 description: "Report test results to Blinka"
 author: "davidwessman"
+branding:
+  icon: "book-open"
+  color: "green"
 inputs:
   repository:
     required: true
