--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blinka-reporting",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "description": "Report test results to Blinka",
   "main": "lib/main.js",
@@ -8,7 +8,8 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.ts --fix",
+    "lint-check": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest --testLocationInResults",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
@@ -26,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.5.0",
+    "@actions/github": "^5.0.0",
     "@actions/http-client": "^1.0.11",
     "form-data": "^4.0.0",
     "mime": "^2.5.2"
