--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@actions/core": "^1.5.0",
     "@actions/github": "^5.0.0",
     "@actions/http-client": "^1.0.11",
+    "fast-xml-parser": "^3.19.0",
     "form-data": "^4.0.0",
     "mime": "^2.5.2"
   },
@@ -47,6 +48,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.1.0",
     "jest-circus": "^27.1.0",
+    "jest-junit": "^12.2.0",
     "js-yaml": "^4.1.0",
     "nock": "^13.1.3",
     "prettier": "2.3.2",
