--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "blinka-reporting",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "description": "Report test results to Blinka",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write **/*.ts",
-    "format-check": "prettier --check **/*.ts",
+    "format": "prettier --write ./",
     "lint": "eslint src/**/*.ts --fix",
-    "lint-check": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest --testLocationInResults",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
@@ -41,11 +39,8 @@
     "@types/node": "^17.0.13",
     "@typescript-eslint/parser": "^5.10.1",
     "@vercel/ncc": "^0.33.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^26.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.7",
     "jest-circus": "^27.2.4",
     "jest-junit": "^13.0.0",
