--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,13 +49,15 @@ jobs:
       - run: |
           sed -i 's/\"commit\": \"fake\"/\"commit\": \"${{ github.even.pull_request.head.sha || github.sha }}\"/g' ./__tests__/blinka_results.json
 
-      - uses: ./
+      - name: json
+        uses: ./
         with:
           tag: blinka.json
           github_token: ${{ secrets.GITHUB_TOKEN }}
           filename: './__tests__/blinka_results.json'
 
-      - uses: ./
+      - name: junit
+        uses: ./
         with:
           tag: junit
           github_token: ${{ secrets.GITHUB_TOKEN }}
