--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -4,7 +4,7 @@ name: report-results
 # access to secrets
 on:
   workflow_run:
-    workflows: ['build-test']
+    workflows: ["build-test"]
     types:
       - completed
 
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: 'Download artifact'
+      - name: "Download artifact"
         uses: actions/github-script@v5.1.0
         with:
           script: |
-            var artifacts = await github.actions.listWorkflowRunArtifacts({
+            var artifacts = await github.rest.actions.listWorkflowRunArtifacts({
                owner: context.repo.owner,
                repo: context.repo.repo,
                run_id: ${{github.event.workflow_run.id }},
@@ -29,7 +29,7 @@ jobs:
             var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
               return artifact.name == "report"
             })[0];
-            var download = await github.actions.downloadArtifact({
+            var download = await github.rest.actions.downloadArtifact({
                owner: context.repo.owner,
                repo: context.repo.repo,
                artifact_id: matchArtifact.id,
@@ -38,15 +38,15 @@ jobs:
             var fs = require('fs');
             fs.writeFileSync('${{github.workspace}}/report.zip', Buffer.from(download.data));
       - run: unzip report.zip
-      - name: 'Upload report to Blinka'
+      - name: "Upload report to Blinka"
         uses: ./
         with:
           token_id: ${{ secrets.BLINKA_TOKEN_ID }}
           token_secret: ${{ secrets.BLINKA_TOKEN_SECRET }}
-          filename: './blinka_results.json'
+          filename: "./blinka_results.json"
 
-      - name: 'Write directly to Github'
+      - name: "Write directly to Github"
         uses: ./
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          filename: './blinka_results.json'
+          filename: "./blinka_results.json"
